Bug 94514 - 24bit-source-pictures don't sample alpha=0 outside surface bounds [glamor]
Summary: 24bit-source-pictures don't sample alpha=0 outside surface bounds [glamor]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Acceleration/glamor (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-12 19:12 UTC by Clemens Eisserer
Modified: 2016-05-26 08:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
glamor: Only force alpha to 1.0 inside source pictures (3.78 KB, patch)
2016-03-15 08:44 UTC, Michel Dänzer
no flags Details | Splinter Review
self-contained testcase (2.68 KB, text/plain)
2016-05-16 12:25 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2016-03-12 19:12:39 UTC
Same behaviour mentioned in bug 16820 and bug 17933:

Composition with 24-bit source pixmaps does not result in alpha=0 outside source surface bounds, instead it samples as black a=255, rgb=0.

Tested on AMD Mullins running an updated instance of Fedora-23 (Xorg 1.18.1, radeon 7.6.99, Linux 4.4.4).
Comment 1 Michel Dänzer 2016-03-14 08:51:19 UTC
What's your test case?
Comment 2 Michel Dänzer 2016-03-15 08:22:33 UTC
Ideally, there'd be a rendercheck test case exercising this.

Meanwhile, this is more likely an issue in glamor or the Mesa radeonsi driver than in the Xorg driver. Reassigning to glamor for now. (Maybe you can try if it also happens with the modesetting driver using glamor on other hardware?)
Comment 3 Michel Dänzer 2016-03-15 08:44:52 UTC
Created attachment 122306 [details] [review]
glamor: Only force alpha to 1.0 inside source pictures

Does this xserver patch fix the probem?
Comment 4 Clemens Eisserer 2016-05-16 12:25:21 UTC
Created attachment 123778 [details]
self-contained testcase

Thanks a lot for looking into this issue. 

Unfortunatly I can't compile X on the machine where I saw this issue, so I decided to create a self-contained testcase.
Comment 5 Michel Dänzer 2016-05-24 09:16:43 UTC
Comment on attachment 122306 [details] [review]
glamor: Only force alpha to 1.0 inside source pictures

https://patchwork.freedesktop.org/patch/88805/ fixes the attached test case for me.
Comment 6 Michel Dänzer 2016-05-26 08:33:27 UTC
commit 4711ebc174206b5a50e6ae8a7f974cd835e4ebd3
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Tue May 24 18:12:42 2016 +0900

    glamor: Fix sampling outside of RGBx source/mask pictures


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.